--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>LittleLink</title>
-  <meta name="description" content="https://littlelink.io">
+  <meta name="description" content="https://mega.paypig.club">
   <meta name="author" content="Seth Cottle">
 
   <!-- Mobile Specific Metas
@@ -32,7 +32,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/littlelink.png">
+  <link rel="icon" type="image/png" href="images/avatar.png">
 
 </head>
 
@@ -66,10 +66,10 @@
         <img src="images/littlelink.svg" class="avatar" srcset="images/littlelink.svg 2x" alt="">
 
         <!-- Title -->
-        <h1 role="heading">LittleLink</h1>
+        <h1 role="heading">Mega</h1>
 
         <!-- Short Bio -->
-        <p>An open source DIY <a href="https://linktr.ee" target="_blank" rel="noopener" role="link">Linktree</a> alternative.</p>
+        <p>HI !! An open source DIY <a href="https://linktr.ee" target="_blank" rel="noopener" role="link">Linktree</a> alternative.</p>
 
         <!--
 
